--- a/part9/9.1-9.7/package.json
+++ b/part9/9.1-9.7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "9.1-9.3",
+  "name": "9.1-9.7",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,8 @@
     "exercises": "ts-node exerciseCalculator.ts",
     "exe-c": "ts-node exerciseCalculator-c.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
