--- a/part9/9.8-9.13-Patientor/patientor-backend/package.json
+++ b/part9/9.8-9.13-Patientor/patientor-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",    
+    "dev": "ts-node-dev index.ts",
     "lint": "eslint --ext .ts ."
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
@@ -20,6 +21,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.1"
   }
 }
